--- a/admindash.html
+++ b/admindash.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Marigold Memories - Home</title>
-    <link rel="stylesheet" href="style1.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
